# extensions-GambitScheme

./: CMakeLists.txt  GambitScheme.dist  README.txt  Setup.cmake
Scripting/: GambitScheme.cpp  GambitScheme.h  init.c  init.h  init.scm  init_.c
